k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: timesheet-management
  labels:
    name: timesheet-management
    app: timesheet-management
