k8s/public-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: ""
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/healthz"
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "timesheet-rg"
    service.beta.kubernetes.io/azure-load-balancer-name: "timesheet-public-lb"
    service.beta.kubernetes.io/azure-pip-name: "timesheet-public-ip"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: "52.228.185.97"
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: nginx-ingress
    app.kubernetes.io/name: ingress-nginx
