k8s/public-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timesheet-public-nodeport
  namespace: timesheet-management
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  - port: 443
    targetPort: 8080
    nodePort: 30443
    protocol: TCP
    name: https
  selector:
    app: timesheet-app
